--- a/source/one/config.json
+++ b/source/one/config.json
@@ -2,5 +2,5 @@
     "web_url":"https://send.o5g.top",
     "version":"v1.0.0",
     "version_num":"100",
-    "plateform":"window"
+    "plateform":"windows"
 }
